[tool.poetry]
name = "solution"
version = "0.1.0"
description = ""
authors = ["Vladimir Panov <vladimirpanov73@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
jupyter = "^1.0.0"
numpy = "^1.26.0"
pandas = "^2.1.1"
matplotlib = "^3.8.0"
plotly = "^5.17.0"
scikit-learn = "^1.3.1"
catboost = "^1.2.2"
lightgbm = "^4.1.0"
geopandas = "^0.14.0"
optuna = "^3.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
